# AcceleratedBinnedStatistic

./: .flake8  .gitignore  .python-version  Dockerfile  Makefile  README.md  acc_binned_statistic.def  pyproject.toml  requirements.txt  submit_benchs.sh  submit_benchs_singularity.sh  submit_examples.sh  submit_examples_singularity.sh  submit_install.sh  submit_install_uv.sh  submit_profs.sh  submit_tests.sh  submit_tests_singularity.sh
benchmarks/: bench.py
examples/: example_base.py  example_dist.py
profiles/: prof.py
scripts/: submit_benchs.sh  submit_benchs_singularity.sh  submit_examples.sh  submit_examples_singularity.sh  submit_install.sh  submit_install_uv.sh  submit_profs.sh  submit_tests.sh  submit_tests_singularity.sh
src/acceleratedbinnedstatistic/: binned_statistic.py
tests/: test_binned.py  test_scatter.py
